--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -172,7 +172,7 @@
   "block.bwt.oak_planks_pedestal": "Дубовый пьедестал",
   "block.bwt.oak_planks_siding": "Дубовая обшивка",
   "block.bwt.oak_planks_table": "Дубовый стол",
-  "block.bwt.obsidian_detector_rail": "Нажимные рельсы (игрок)",
+  "block.bwt.obsidian_detector_rail": "Игроковесные нажимные рельсы",
   "block.bwt.obsidian_pressure_plate": "Утяжелённая нажимная пластина (игрок)",
   "block.bwt.orange_wool_slab": "Плита из оранжевой шерсти",
   "block.bwt.padding_block": "Блок набивки",
@@ -251,7 +251,7 @@
   "block.bwt.stone_bricks_table": "Стол из каменного кирпича",
   "block.bwt.stone_column": "Каменная колонна",
   "block.bwt.stone_corner": "Каменный кубик",
-  "block.bwt.stone_detector_rail": "Нажимные рельсы (тяжёлые)",
+  "block.bwt.stone_detector_rail": "Тяжеловесные нажимные рельсы",
   "block.bwt.stone_moulding": "Каменный брус",
   "block.bwt.stone_pedestal": "Каменный пьедестал",
   "block.bwt.stone_siding": "Каменная обшивка",
