--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -35,7 +35,7 @@
   "block.bwt.blood_wood_door": "Дверь из кровавого дерева",
   "block.bwt.blood_wood_fence": "Забор из кровавого дерева",
   "block.bwt.blood_wood_fence_gate": "Калитка из кровавого дерева",
-  "block.bwt.blood_wood_leaves": "Листва кровавого дерева",
+  "block.bwt.blood_wood_leaves": "Листья кровавого дерева",
   "block.bwt.blood_wood_log": "Бревно кровавого дерева",
   "block.bwt.blood_wood_planks": "Доски из кровавого дерева",
   "block.bwt.blood_wood_planks_column": "Колонна из кровавого дерева",
@@ -59,7 +59,7 @@
   "block.bwt.brown_wool_slab": "Плита из коричневой шерсти",
   "block.bwt.buddy_block": "Добряк",
   "block.bwt.canvas": "Холст",
-  "block.bwt.cauldron": "Котёл",
+  "block.bwt.cauldron": "Казан",
   "block.bwt.cherry_planks_column": "Вишнёвая колонна",
   "block.bwt.cherry_planks_corner": "Вишнёвый кубик",
   "block.bwt.cherry_planks_moulding": "Вишнёвый брус",
@@ -73,8 +73,8 @@
   "block.bwt.cobbled_deepslate_siding": "Обшивка из колотого глубинного сланца",
   "block.bwt.cobbled_deepslate_table": "Стол из колотого глубинного сланца",
   "block.bwt.column": "Колонна",
-  "block.bwt.companion_cube": "Куб компаньон",
-  "block.bwt.companion_slab": "Плита компаньон",
+  "block.bwt.companion_cube": "Куб-компаньон",
+  "block.bwt.companion_slab": "Плита-компаньон",
   "block.bwt.concentrated_hellfire_block": "Блок концентрированного адского пламени",
   "block.bwt.corner": "Кубик",
   "block.bwt.crimson_planks_column": "Багровая колонна",
@@ -119,10 +119,10 @@
   "block.bwt.grate": "Сетка",
   "block.bwt.gray_wool_slab": "Плита из серой шерсти",
   "block.bwt.green_wool_slab": "Плита из зелёной шерсти",
-  "block.bwt.hand_crank": "Рукоятка",
+  "block.bwt.hand_crank": "Пусковой рычаг",
   "block.bwt.hemp": "Конопля",
   "block.bwt.hibachi": "Хибачи",
-  "block.bwt.hopper": "Воронка",
+  "block.bwt.hopper": "Механическая воронка",
   "block.bwt.infernal_enchanter": "Инфернальный зачарователь",
   "block.bwt.jungle_planks_column": "Колонна из тропического дерева",
   "block.bwt.jungle_planks_corner": "Кубик из тропического дерева",
@@ -130,9 +130,9 @@
   "block.bwt.jungle_planks_pedestal": "Пьедестал из тропического дерева",
   "block.bwt.jungle_planks_siding": "Обшивка из тропического дерева",
   "block.bwt.jungle_planks_table": "Стол из тропического дерева",
-  "block.bwt.kiln": "Кирпичная печь",
+  "block.bwt.kiln": "Печь для обжига",
   "block.bwt.lens": "Линза",
-  "block.bwt.light_block": "Светящийся блок",
+  "block.bwt.light_block": "Светоносный блок",
   "block.bwt.light_blue_wool_slab": "Плита из голубой шерсти",
   "block.bwt.light_gray_wool_slab": "Плита из светло-серой шерсти",
   "block.bwt.lime_wool_slab": "Плита из лаймовой шерсти",
@@ -222,11 +222,11 @@
   "block.bwt.red_wool_slab": "Плита из красной шерсти",
   "block.bwt.rope": "Верёвка",
   "block.bwt.rope_coil_block": "Моток верёвки",
-  "block.bwt.sandstone_column": " Песчаниковая колонна",
+  "block.bwt.sandstone_column": "Песчаниковая колонна",
   "block.bwt.sandstone_corner": "Песчаниковый кубик",
   "block.bwt.sandstone_moulding": "Песчаниковый брус",
   "block.bwt.sandstone_pedestal": "Песчаниковый пьедестал",
-  "block.bwt.sandstone_siding": " Песчаниковая обшивка",
+  "block.bwt.sandstone_siding": "Песчаниковая обшивка",
   "block.bwt.sandstone_table": "Песчаниковый стол",
   "block.bwt.saw": "Пила",
   "block.bwt.screw_pump": "Винтовой насос",
@@ -272,7 +272,7 @@
   "block.bwt.unfired_pottery": "Необожжённое гончарное изделие",
   "block.bwt.unfired_urn": "Необожжённый сосуд",
   "block.bwt.unfired_vase": "Необожжённая ваза",
-  "block.bwt.urn": "Сосуд",
+  "block.bwt.urn": "Урна",
   "block.bwt.vase": "Ваза",
   "block.bwt.vase_black": "Чёрная ваза",
   "block.bwt.vase_blue": "Синяя ваза",
@@ -313,7 +313,7 @@
   "bwt.subtitles.block.detector.click": "Щелчок детектора",
   "bwt.subtitles.block.gear_box.activate": "Коробка передач активируется",
   "bwt.subtitles.block.generic.soul_conversion": "Души трансмогрифицируются",
-  "bwt.subtitles.block.hand_crank.click": "Рукоятка потянута",
+  "bwt.subtitles.block.hand_crank.click": "Пусковой рычаг потянут",
   "bwt.subtitles.block.hibachi.ignite": "Хибачи вспыхивает",
   "bwt.subtitles.block.mech.bang": "Механическое устройство запущено",
   "bwt.subtitles.block.mech.creak": "Механическое устройство скрипит",
@@ -328,25 +328,25 @@
   "bwt.subtitles.entity.wolf.dung.effort": "Волк рычит",
   "bwt.subtitles.entity.wolf.dung.production": "Волк производит экскремент",
   "container.bwt.block_dispenser": "Установщик",
-  "container.bwt.soul_forge": "Кузница душ",
+  "container.bwt.soul_forge": "Продвинутое создание",
   "death.attack.bwt.saw": "%1$s распилен пополам",
-  "emi.category.bwt.cauldron": "Котёл",
-  "emi.category.bwt.crucible": "Тигель",
-  "emi.category.bwt.hopper_filtering": "Воронка: Фильтр",
-  "emi.category.bwt.hopper_souls": "Воронка: Извлечение душ",
-  "emi.category.bwt.kiln": "Кирпичная печь",
-  "emi.category.bwt.mill_stone": "Жёрнов",
-  "emi.category.bwt.saw": "Пила",
-  "emi.category.bwt.soul_forge": "Кузница душ",
-  "emi.category.bwt.stoked_cauldron": "Разожённый котёл",
-  "emi.category.bwt.stoked_crucible": "Разожённый тигель",
-  "emi.category.bwt.stoked_crucible_reclaim": "Разожённый тигель: Утилизация",
-  "emi.category.bwt.turntable": "Поворотный стол",
-  "emi.tooltip.bwt.hopper_souls_power": "Рекомендуется использовать механическое энергию",
+  "emi.category.bwt.cauldron": "Готовка в казане",
+  "emi.category.bwt.crucible": "Плавка в тигеле",
+  "emi.category.bwt.hopper_filtering": "Фильтрование",
+  "emi.category.bwt.hopper_souls": "Извлечение душ",
+  "emi.category.bwt.kiln": "Обжиг",
+  "emi.category.bwt.mill_stone": "Перемалывание",
+  "emi.category.bwt.saw": "Пиление",
+  "emi.category.bwt.soul_forge": "Продвинутое создание",
+  "emi.category.bwt.stoked_cauldron": "Готовка в разожённом казане",
+  "emi.category.bwt.stoked_crucible": "Плавка в тигеле",
+  "emi.category.bwt.stoked_crucible_reclaim": "Утилизация",
+  "emi.category.bwt.turntable": "Лепка",
+  "emi.tooltip.bwt.hopper_souls_power": "Рекомендуется использовать механическую энергию",
   "entity.bwt.broadhead_arrow": "Стрела с наконечником",
   "entity.bwt.dynamite": "Брошенная динамитная шашка",
   "entity.bwt.mining_charge": "Активированный шахтёрский заряд",
-  "entity.bwt.moving_rope": "Движущая верёвка",
+  "entity.bwt.moving_rope": "Движущаяся верёвка",
   "entity.bwt.rotted_arrow": "Гнилая стрела",
   "entity.bwt.water_wheel": "Водяное колесо",
   "entity.bwt.windmill": "Ветреная мельница",
@@ -378,7 +378,7 @@
   "item.bwt.gear": "Шестерня",
   "item.bwt.glue": "Клей",
   "item.bwt.ground_netherrack": "Молотый незерак",
-  "item.bwt.haft": "Коятка",
+  "item.bwt.haft": "Рукоять",
   "item.bwt.hellfire_dust": "Адскопламенная пыль",
   "item.bwt.hemp": "Конопля",
   "item.bwt.hemp_fiber": "Конопляное волокно",
@@ -406,7 +406,7 @@
   "item.bwt.screw": "Винт",
   "item.bwt.soap": "Мыло",
   "item.bwt.soul_dust": "Пыль душ",
-  "item.bwt.soul_urn": "Сосуд душ",
+  "item.bwt.soul_urn": "Урна душ",
   "item.bwt.soulforged_steel": "Душекованная сталь",
   "item.bwt.strap": "Лямка",
   "item.bwt.tallow": "Жир",
@@ -429,6 +429,7 @@
   "tag.item.bwt.passes_wicker_filter": "Проходит через фильтр плетения",
   "tag.item.bwt.pedestal_blocks": "Пьедесталы",
   "tag.item.bwt.saw_dusts": "Опилки",
+  "tag.item.bwt.siding_blocks": "Обшивки",
   "tag.item.bwt.siding_blocks": "Обшивки",
   "tag.item.bwt.stoked_explosives": "Взрываются в разожённом котле",
   "tag.item.bwt.table_blocks": "Столы",
