--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -431,7 +431,7 @@
   "tag.item.bwt.saw_dusts": "Опилки",
   "tag.item.bwt.siding_blocks": "Обшивки",
   "tag.item.bwt.siding_blocks": "Обшивки",
-  "tag.item.bwt.stoked_explosives": "Взрываются в разожённом котле",
+  "tag.item.bwt.stoked_explosives": "Взрываются в разожённом казане",
   "tag.item.bwt.table_blocks": "Столы",
   "tag.item.bwt.vases": "Вазы",
   "tag.item.bwt.wooden_column_blocks": "Деревянные колонны",
