--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -270,7 +270,7 @@
   "block.bwt.unfired_mould": "Необожжённая формочка",
   "block.bwt.unfired_planter": "Необожжённый вазон",
   "block.bwt.unfired_pottery": "Необожжённое гончарное изделие",
-  "block.bwt.unfired_urn": "Необожжённый сосуд",
+  "block.bwt.unfired_urn": "Необожжённая урна",
   "block.bwt.unfired_vase": "Необожжённая ваза",
   "block.bwt.urn": "Урна",
   "block.bwt.vase": "Ваза",
@@ -324,7 +324,7 @@
   "bwt.subtitles.entity.dynamite.ignite": "Шипение фитиля динамитной шашки",
   "bwt.subtitles.entity.dynamite.throw": "Летит динамитная шашка",
   "bwt.subtitles.entity.mining_charge.prime": "Шипение фитиля шахтёрского заряда",
-  "bwt.subtitles.entity.soul_urn.throw": "Летит сосуд душ",
+  "bwt.subtitles.entity.soul_urn.throw": "Летит урна душ",
   "bwt.subtitles.entity.wolf.dung.effort": "Волк рычит",
   "bwt.subtitles.entity.wolf.dung.production": "Волк производит экскремент",
   "container.bwt.block_dispenser": "Установщик",
@@ -336,7 +336,7 @@
   "emi.category.bwt.hopper_souls": "Извлечение душ",
   "emi.category.bwt.kiln": "Обжиг",
   "emi.category.bwt.mill_stone": "Перемалывание",
-  "emi.category.bwt.saw": "Пиление",
+  "emi.category.bwt.saw": "Резьба по дереву",
   "emi.category.bwt.soul_forge": "Продвинутое создание",
   "emi.category.bwt.stoked_cauldron": "Готовка в разожённом казане",
   "emi.category.bwt.stoked_crucible": "Плавка в тигеле",
@@ -349,7 +349,7 @@
   "entity.bwt.moving_rope": "Движущаяся верёвка",
   "entity.bwt.rotted_arrow": "Гнилая стрела",
   "entity.bwt.water_wheel": "Водяное колесо",
-  "entity.bwt.windmill": "Ветреная мельница",
+  "entity.bwt.windmill": "Ветряная мельница",
   "gamerule.disableVanillaHopperTransfer": "Отключить функционал ванильной воронки",
   "gamerule.lensBeamRange": "Расстояние луча линзы",
   "gamerule.lensBeamRange.description": "Влияет на производительность!",
@@ -361,7 +361,7 @@
   "item.bwt.candle": "Свеча",
   "item.bwt.cement_bucket": "Ведро цемента",
   "item.bwt.coal_dust": "Угольная пыль",
-  "item.bwt.composite_bow": "Составной лук",
+  "item.bwt.composite_bow": "Композитный лук",
   "item.bwt.concentrated_hellfire": "Концентрированное адское пламя",
   "item.bwt.cooked_wolf_chop": "Жареная волчатина",
   "item.bwt.donut": "Пышка",
@@ -408,28 +408,27 @@
   "item.bwt.soul_dust": "Пыль душ",
   "item.bwt.soul_urn": "Урна душ",
   "item.bwt.soulforged_steel": "Душекованная сталь",
-  "item.bwt.strap": "Лямка",
+  "item.bwt.strap": "Ремешок",
   "item.bwt.tallow": "Жир",
   "item.bwt.tanned_leather": "Дублёная кожа",
   "item.bwt.tanned_leather_armor": "Дублёная кожаная броня",
   "item.bwt.water_wheel": "Водяное колесо",
-  "item.bwt.windmill": "Ветреная мельница",
+  "item.bwt.windmill": "Ветряная мельница",
   "item.bwt.wolf_chop": "Сырая волчатина",
   "item.bwt.wood_blade": "Деревянная лопасть",
   "tag.item.bwt.blood_wood_logs": "Брёвна кровавого дерева",
   "tag.item.bwt.column_blocks": "Колонны",
   "tag.item.bwt.corner_blocks": "Кубики",
-  "tag.item.bwt.mining_charge_immune": "Взрывоустойчивы от шахтёрского заряда",
+  "tag.item.bwt.mining_charge_immune": "Взрывоустойчивы к шахтёрскому заряду",
   "tag.item.bwt.moulding_blocks": "Брусы",
-  "tag.item.bwt.passes_grate_filter": "Проходит через фильтр сетки",
-  "tag.item.bwt.passes_iron_bars_filter": "Проходит через фильтр железных прутьев",
-  "tag.item.bwt.passes_ladder_filter": "Проходит через фильтр лестницы",
-  "tag.item.bwt.passes_slats_filter": "Проходит через фильтр рейки",
-  "tag.item.bwt.passes_trapdoor_filter": "Проходит через фильтр люка",
-  "tag.item.bwt.passes_wicker_filter": "Проходит через фильтр плетения",
+  "tag.item.bwt.passes_grate_filter": "Фильтруются сеткой",
+  "tag.item.bwt.passes_iron_bars_filter": "Фильтруются железными прутьями",
+  "tag.item.bwt.passes_ladder_filter": "Фильтруются лестницой",
+  "tag.item.bwt.passes_slats_filter": "Фильтруются рейками",
+  "tag.item.bwt.passes_trapdoor_filter": "Фильтруются люком",
+  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетением",
   "tag.item.bwt.pedestal_blocks": "Пьедесталы",
   "tag.item.bwt.saw_dusts": "Опилки",
-  "tag.item.bwt.siding_blocks": "Обшивки",
   "tag.item.bwt.siding_blocks": "Обшивки",
   "tag.item.bwt.stoked_explosives": "Взрываются в разожённом казане",
   "tag.item.bwt.table_blocks": "Столы",
