--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -1,13 +1,13 @@
 {
   "block.bwt.acacia_planks_column": "Акациевая колонна",
-  "block.bwt.acacia_planks_corner": "Акациевый кубик",
+  "block.bwt.acacia_planks_corner": "Акациевый уголок",
   "block.bwt.acacia_planks_moulding": "Акациевый брус",
   "block.bwt.acacia_planks_pedestal": "Акациевый пьедестал",
   "block.bwt.acacia_planks_siding": "Акациевая обшивка",
   "block.bwt.acacia_planks_table": "Акациевый стол",
   "block.bwt.anchor": "Якорь",
   "block.bwt.andesite_column": "Андезитовая колонна",
-  "block.bwt.andesite_corner": "Андезитовый кубик",
+  "block.bwt.andesite_corner": "Андезитовый уголок",
   "block.bwt.andesite_moulding": "Андезитовый брус",
   "block.bwt.andesite_pedestal": "Андезитовый пьедестал",
   "block.bwt.andesite_siding": "Андезитовая обшивка",
@@ -15,7 +15,7 @@
   "block.bwt.anvil": "Наковальня",
   "block.bwt.axle": "Вал",
   "block.bwt.bamboo_planks_column": "Бамбуковая колонна",
-  "block.bwt.bamboo_planks_corner": "Бамбуковый кубик",
+  "block.bwt.bamboo_planks_corner": "Бамбуковый уголок",
   "block.bwt.bamboo_planks_moulding": "Бамбуковый брус",
   "block.bwt.bamboo_planks_pedestal": "Бамбуковый пьедестал",
   "block.bwt.bamboo_planks_siding": "Бамбуковая обшивка",
@@ -23,7 +23,7 @@
   "block.bwt.barrel": "Бочка",
   "block.bwt.bellows": "Мехи",
   "block.bwt.birch_planks_column": "Берёзовая колонна",
-  "block.bwt.birch_planks_corner": "Берёзовый кубик",
+  "block.bwt.birch_planks_corner": "Берёзовый уголок",
   "block.bwt.birch_planks_moulding": "Берёзовый брус",
   "block.bwt.birch_planks_pedestal": "Берёзовый пьедестал",
   "block.bwt.birch_planks_siding": "Берёзовая обшивка",
@@ -39,7 +39,7 @@
   "block.bwt.blood_wood_log": "Бревно кровавого дерева",
   "block.bwt.blood_wood_planks": "Доски из кровавого дерева",
   "block.bwt.blood_wood_planks_column": "Колонна из кровавого дерева",
-  "block.bwt.blood_wood_planks_corner": "Кубик из кровавого дерева",
+  "block.bwt.blood_wood_planks_corner": "Уголок из кровавого дерева",
   "block.bwt.blood_wood_planks_moulding": "Брус из кровавого дерева",
   "block.bwt.blood_wood_planks_pedestal": "Пьедестал из кровавого дерева",
   "block.bwt.blood_wood_planks_siding": "Обшивка из кровавого дерева",
@@ -51,7 +51,7 @@
   "block.bwt.blood_wood_trapdoor": "Люк из кровавого дерева",
   "block.bwt.blue_wool_slab": "Плита из синей шерсти",
   "block.bwt.bricks_column": "Кирпичная колонна",
-  "block.bwt.bricks_corner": "Кирпичный кубик",
+  "block.bwt.bricks_corner": "Кирпичный уголок",
   "block.bwt.bricks_moulding": "Кирпичный брус",
   "block.bwt.bricks_pedestal": "Кирпичный пьедестал",
   "block.bwt.bricks_siding": "Кирпичная обшивка",
@@ -61,13 +61,13 @@
   "block.bwt.canvas": "Холст",
   "block.bwt.cauldron": "Казан",
   "block.bwt.cherry_planks_column": "Вишнёвая колонна",
-  "block.bwt.cherry_planks_corner": "Вишнёвый кубик",
+  "block.bwt.cherry_planks_corner": "Вишнёвый уголок",
   "block.bwt.cherry_planks_moulding": "Вишнёвый брус",
   "block.bwt.cherry_planks_pedestal": "Вишнёвый пьедестал",
   "block.bwt.cherry_planks_siding": "Вишнёвая обшивка",
   "block.bwt.cherry_planks_table": "Вишнёвый стол",
   "block.bwt.cobbled_deepslate_column": "Колонна из колотого глубинного сланца",
-  "block.bwt.cobbled_deepslate_corner": "Кубик из колотого глубинного сланца",
+  "block.bwt.cobbled_deepslate_corner": "Уголок из колотого глубинного сланца",
   "block.bwt.cobbled_deepslate_moulding": "Брус из колотого глубинного сланца",
   "block.bwt.cobbled_deepslate_pedestal": "Пьедестал из колотого глубинного сланца",
   "block.bwt.cobbled_deepslate_siding": "Обшивка из колотого глубинного сланца",
@@ -76,9 +76,9 @@
   "block.bwt.companion_cube": "Куб-компаньон",
   "block.bwt.companion_slab": "Плита-компаньон",
   "block.bwt.concentrated_hellfire_block": "Блок концентрированного адского пламени",
-  "block.bwt.corner": "Кубик",
+  "block.bwt.corner": "Уголок",
   "block.bwt.crimson_planks_column": "Багровая колонна",
-  "block.bwt.crimson_planks_corner": "Багровый кубик",
+  "block.bwt.crimson_planks_corner": "Багровый уголок",
   "block.bwt.crimson_planks_moulding": "Багровый брус",
   "block.bwt.crimson_planks_pedestal": "Багровый пьедестал",
   "block.bwt.crimson_planks_siding": "Багровая обшивка",
@@ -86,30 +86,30 @@
   "block.bwt.crucible": "Тигель",
   "block.bwt.cyan_wool_slab": "Плита из бирюзовой шерсти",
   "block.bwt.dark_oak_planks_column": "Колонна из тёмного дуба",
-  "block.bwt.dark_oak_planks_corner": "Кубик из тёмного дуба",
+  "block.bwt.dark_oak_planks_corner": "Уголок из тёмного дуба",
   "block.bwt.dark_oak_planks_moulding": "Брус из тёмного дуба",
   "block.bwt.dark_oak_planks_pedestal": "Пьедестал из тёмного дуба",
   "block.bwt.dark_oak_planks_siding": "Обшивка из тёмного дуба",
   "block.bwt.dark_oak_planks_table": "Стол из тёмного дуба",
   "block.bwt.detector_block": "Детектор",
   "block.bwt.diorite_column": "Диоритовая колонна",
-  "block.bwt.diorite_corner": "Диоритовый кубик",
+  "block.bwt.diorite_corner": "Диоритовый уголок",
   "block.bwt.diorite_moulding": "Диоритовый брус",
   "block.bwt.diorite_pedestal": "Диоритовый пьедестал",
   "block.bwt.diorite_siding": "Диоритовая обшивка",
   "block.bwt.diorite_table": "Диоритовый стол",
   "block.bwt.dirt_path_slab": "Тропиночная плита",
   "block.bwt.dirt_slab": "Земляная плита",
-  "block.bwt.dung_block": "Блок экскрементов",
+  "block.bwt.dung_block": "Блок навоза",
   "block.bwt.end_stone_bricks_column": "Колонна из эндернякового кирпича",
-  "block.bwt.end_stone_bricks_corner": "Кубик из эндернякового кирпича",
+  "block.bwt.end_stone_bricks_corner": "Уголок из эндернякового кирпича",
   "block.bwt.end_stone_bricks_moulding": "Брус из эндернякового кирпича",
   "block.bwt.end_stone_bricks_pedestal": "Пьедестал из эндернякового кирпича",
   "block.bwt.end_stone_bricks_siding": "Обшивка из эндернякового кирпича",
   "block.bwt.end_stone_bricks_table": "Стол из эндернякового кирпича",
   "block.bwt.gear_box": "Коробка передач",
   "block.bwt.granite_column": "Гранитовая колонна",
-  "block.bwt.granite_corner": "Гранитовый кубик",
+  "block.bwt.granite_corner": "Гранитовый уголок",
   "block.bwt.granite_moulding": "Гранитовый брус",
   "block.bwt.granite_pedestal": "Гранитовый пьедестал",
   "block.bwt.granite_siding": "Гранитовая обшивка",
@@ -125,7 +125,7 @@
   "block.bwt.hopper": "Механическая воронка",
   "block.bwt.infernal_enchanter": "Инфернальный зачарователь",
   "block.bwt.jungle_planks_column": "Колонна из тропического дерева",
-  "block.bwt.jungle_planks_corner": "Кубик из тропического дерева",
+  "block.bwt.jungle_planks_corner": "Уголок из тропического дерева",
   "block.bwt.jungle_planks_moulding": "Брус из тропического дерева",
   "block.bwt.jungle_planks_pedestal": "Пьедестал из тропического дерева",
   "block.bwt.jungle_planks_siding": "Обшивка из тропического дерева",
@@ -138,7 +138,7 @@
   "block.bwt.lime_wool_slab": "Плита из лаймовой шерсти",
   "block.bwt.magenta_wool_slab": "Плита из пурпурной шерсти",
   "block.bwt.mangrove_planks_column": "Мангровая колонна",
-  "block.bwt.mangrove_planks_corner": "Мангровый кубик",
+  "block.bwt.mangrove_planks_corner": "Мангровый уголок",
   "block.bwt.mangrove_planks_moulding": "Мангровый брус",
   "block.bwt.mangrove_planks_pedestal": "Мангровый пьедестал",
   "block.bwt.mangrove_planks_siding": "Мангровая обшивка",
@@ -146,28 +146,28 @@
   "block.bwt.mill_stone": "Жёрнов",
   "block.bwt.mining_charge": "Шахтёрский заряд",
   "block.bwt.mossy_stone_bricks_column": "Колонна из замшелого булыжника",
-  "block.bwt.mossy_stone_bricks_corner": "Кубик из замшелого булыжника",
+  "block.bwt.mossy_stone_bricks_corner": "Уголок из замшелого булыжника",
   "block.bwt.mossy_stone_bricks_moulding": "Брус из замшелого булыжника",
   "block.bwt.mossy_stone_bricks_pedestal": "Пьедестал из замшелого булыжника",
   "block.bwt.mossy_stone_bricks_siding": "Обшивка из замшелого булыжника",
   "block.bwt.mossy_stone_bricks_table": "Стол из замшелого булыжника",
   "block.bwt.moulding": "Брус",
   "block.bwt.mud_bricks_column": "Саманная колонна",
-  "block.bwt.mud_bricks_corner": "Саманный кубик",
+  "block.bwt.mud_bricks_corner": "Саманный уголок",
   "block.bwt.mud_bricks_moulding": "Саманный брус",
   "block.bwt.mud_bricks_pedestal": "Саманный пьедестал",
   "block.bwt.mud_bricks_siding": "Саманная обшивка",
   "block.bwt.mud_bricks_table": "Саманный стол",
   "block.bwt.mycelium_slab": "Мицелиевая плита",
   "block.bwt.nether_bricks_column": "Колонна из незерского кирпича",
-  "block.bwt.nether_bricks_corner": "Кубик из незерского кирпича",
+  "block.bwt.nether_bricks_corner": "Уголок из незерского кирпича",
   "block.bwt.nether_bricks_moulding": "Брус из незерского кирпича",
   "block.bwt.nether_bricks_pedestal": "Пьедестал из незерского кирпича",
   "block.bwt.nether_bricks_siding": "Обшивка из незерского кирпича",
   "block.bwt.nether_bricks_table": "Стол из незерского кирпича",
   "block.bwt.nether_groth": "Незерская плесень",
   "block.bwt.oak_planks_column": "Дубовая колонна",
-  "block.bwt.oak_planks_corner": "Дубовый кубик",
+  "block.bwt.oak_planks_corner": "Дубовый уголок",
   "block.bwt.oak_planks_moulding": "Дубовый брус",
   "block.bwt.oak_planks_pedestal": "Дубовый пьедестал",
   "block.bwt.oak_planks_siding": "Дубовая обшивка",
@@ -182,25 +182,25 @@
   "block.bwt.platform": "Платформа",
   "block.bwt.podzol_slab": "Подзольная плита",
   "block.bwt.polished_andesite_column": "Колонна из полированного андезита",
-  "block.bwt.polished_andesite_corner": "Кубик из полированного андезита",
+  "block.bwt.polished_andesite_corner": "Уголок из полированного андезита",
   "block.bwt.polished_andesite_moulding": "Брус из полированного андезита",
   "block.bwt.polished_andesite_pedestal": "Пьедестал из полированного андезита",
   "block.bwt.polished_andesite_siding": "Обшивка из полированного андезита",
   "block.bwt.polished_andesite_table": "Стол из полированного андезита",
   "block.bwt.polished_diorite_column": "Колонна из полированного диорита",
-  "block.bwt.polished_diorite_corner": "Кубик из полированного диорита",
+  "block.bwt.polished_diorite_corner": "Уголок из полированного диорита",
   "block.bwt.polished_diorite_moulding": "Брус из полированного диорита",
   "block.bwt.polished_diorite_pedestal": "Пьедестал из полированного диорита",
   "block.bwt.polished_diorite_siding": "Обшивка из полированного диорита",
   "block.bwt.polished_diorite_table": "Стол из полированного диорита",
   "block.bwt.polished_granite_column": "Колонна из полированного гранита",
-  "block.bwt.polished_granite_corner": "Кубик из полированного гранита",
+  "block.bwt.polished_granite_corner": "Уголок из полированного гранита",
   "block.bwt.polished_granite_moulding": "Брус из полированного гранита",
   "block.bwt.polished_granite_pedestal": "Пьедестал из полированного гранита",
   "block.bwt.polished_granite_siding": "Обшивка из полированного гранита",
   "block.bwt.polished_granite_table": "Стол из полированного гранита",
   "block.bwt.prismarine_column": "Призмариновая колонна",
-  "block.bwt.prismarine_corner": "Призмариновый кубик",
+  "block.bwt.prismarine_corner": "Призмариновый уголок",
   "block.bwt.prismarine_moulding": "Призмариновый брус",
   "block.bwt.prismarine_pedestal": "Призмариновый пьедестал",
   "block.bwt.prismarine_siding": "Призмариновая обшивка",
@@ -208,13 +208,13 @@
   "block.bwt.pulley": "Лебёдка",
   "block.bwt.purple_wool_slab": "Плита из фиолетовой шерсти",
   "block.bwt.purpur_block_column": "Пурпурная колонна",
-  "block.bwt.purpur_block_corner": "Пурпурный кубик",
+  "block.bwt.purpur_block_corner": "Пурпурный уголок",
   "block.bwt.purpur_block_moulding": "Пурпурный брус",
   "block.bwt.purpur_block_pedestal": "Пурпурный пьедестал",
   "block.bwt.purpur_block_siding": "Пурпурная обшивка",
   "block.bwt.purpur_block_table": "Пурпурный стол",
   "block.bwt.red_sandstone_column": "Колонна из красного песчаника",
-  "block.bwt.red_sandstone_corner": "Кубик из красного песчаника",
+  "block.bwt.red_sandstone_corner": "Уголок из красного песчаника",
   "block.bwt.red_sandstone_moulding": "Брус из красного песчаника",
   "block.bwt.red_sandstone_pedestal": "Пьедестал из красного песчаника",
   "block.bwt.red_sandstone_siding": "Обшивка из красного песчаника",
@@ -223,7 +223,7 @@
   "block.bwt.rope": "Верёвка",
   "block.bwt.rope_coil_block": "Моток верёвки",
   "block.bwt.sandstone_column": "Песчаниковая колонна",
-  "block.bwt.sandstone_corner": "Песчаниковый кубик",
+  "block.bwt.sandstone_corner": "Песчаниковый уголок",
   "block.bwt.sandstone_moulding": "Песчаниковый брус",
   "block.bwt.sandstone_pedestal": "Песчаниковый пьедестал",
   "block.bwt.sandstone_siding": "Песчаниковая обшивка",
@@ -236,7 +236,7 @@
   "block.bwt.soul_forge": "Кузница душ",
   "block.bwt.soul_sand_planter": "Вазон с почвой душ",
   "block.bwt.spruce_planks_column": "Еловая колонна",
-  "block.bwt.spruce_planks_corner": "Еловый кубик",
+  "block.bwt.spruce_planks_corner": "Еловый уголок",
   "block.bwt.spruce_planks_moulding": "Еловый брус",
   "block.bwt.spruce_planks_pedestal": "Еловый пьедестал",
   "block.bwt.spruce_planks_siding": "Еловая обшивка",
@@ -244,13 +244,13 @@
   "block.bwt.stake": "Кол",
   "block.bwt.stoked_fire": "Разожжённый огонь",
   "block.bwt.stone_bricks_column": "Колонна из каменного кирпича",
-  "block.bwt.stone_bricks_corner": "Кубик из каменного кирпича",
+  "block.bwt.stone_bricks_corner": "Уголок из каменного кирпича",
   "block.bwt.stone_bricks_moulding": "Брус",
   "block.bwt.stone_bricks_pedestal": "Пьедестал из каменного кирпича",
   "block.bwt.stone_bricks_siding": "Обшивка из каменного кирпича",
   "block.bwt.stone_bricks_table": "Стол из каменного кирпича",
   "block.bwt.stone_column": "Каменная колонна",
-  "block.bwt.stone_corner": "Каменный кубик",
+  "block.bwt.stone_corner": "Каменный уголок",
   "block.bwt.stone_detector_rail": "Большегрузные нажимные рельсы",
   "block.bwt.stone_moulding": "Каменный брус",
   "block.bwt.stone_pedestal": "Каменный пьедестал",
@@ -260,7 +260,7 @@
   "block.bwt.stripped_blood_wood_log": "Обтёсанное бревно кровавого дерева",
   "block.bwt.table": "Стол",
   "block.bwt.tuff_column": "Туфовая колонна",
-  "block.bwt.tuff_corner": "Туфовый кубик",
+  "block.bwt.tuff_corner": "Туфовый уголок",
   "block.bwt.tuff_moulding": "Туфовый брус",
   "block.bwt.tuff_pedestal": "Туфовый пьедестал",
   "block.bwt.tuff_siding": "Туфовая обшивка",
@@ -292,7 +292,7 @@
   "block.bwt.vase_yellow": "Жёлтая ваза",
   "block.bwt.vine_trap": "Лиановая ловушка",
   "block.bwt.warped_planks_column": "Искажённая колонна",
-  "block.bwt.warped_planks_corner": "Искажённый кубик",
+  "block.bwt.warped_planks_corner": "Искажённый уголок",
   "block.bwt.warped_planks_moulding": "Искажённый брус",
   "block.bwt.warped_planks_pedestal": "Искажённый пьедестал",
   "block.bwt.warped_planks_siding": "Искажённая обшивка",
@@ -326,7 +326,7 @@
   "bwt.subtitles.entity.mining_charge.prime": "Шипение фитиля шахтёрского заряда",
   "bwt.subtitles.entity.soul_urn.throw": "Летит урна душ",
   "bwt.subtitles.entity.wolf.dung.effort": "Волк рычит",
-  "bwt.subtitles.entity.wolf.dung.production": "Волк производит экскремент",
+  "bwt.subtitles.entity.wolf.dung.production": "Волк производит навоз",
   "container.bwt.block_dispenser": "Установщик",
   "container.bwt.soul_forge": "Продвинутое создание",
   "death.attack.bwt.saw": "%1$s распилен пополам",
@@ -365,7 +365,7 @@
   "item.bwt.concentrated_hellfire": "Концентрированное адское пламя",
   "item.bwt.cooked_wolf_chop": "Жареная волчатина",
   "item.bwt.donut": "Пышка",
-  "item.bwt.dung": "Экскремент",
+  "item.bwt.dung": "Навоз",
   "item.bwt.dynamite": "Динамитная шашка",
   "item.bwt.element": "Элемент",
   "item.bwt.ender_spectacles": "Эндер-очки",
@@ -418,7 +418,7 @@
   "item.bwt.wood_blade": "Деревянная лопасть",
   "tag.item.bwt.blood_wood_logs": "Брёвна кровавого дерева",
   "tag.item.bwt.column_blocks": "Колонны",
-  "tag.item.bwt.corner_blocks": "Кубики",
+  "tag.item.bwt.corner_blocks": "Уголки",
   "tag.item.bwt.mining_charge_immune": "Взрывоустойчивы к шахтёрскому заряду",
   "tag.item.bwt.moulding_blocks": "Брусы",
   "tag.item.bwt.passes_grate_filter": "Фильтруются сеткой",
@@ -426,7 +426,7 @@
   "tag.item.bwt.passes_ladder_filter": "Фильтруются лестницой",
   "tag.item.bwt.passes_slats_filter": "Фильтруются рейками",
   "tag.item.bwt.passes_trapdoor_filter": "Фильтруются люком",
-  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетением",
+  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетением"
   "tag.item.bwt.pedestal_blocks": "Пьедесталы",
   "tag.item.bwt.saw_dusts": "Опилки",
   "tag.item.bwt.siding_blocks": "Обшивки",
@@ -434,7 +434,7 @@
   "tag.item.bwt.table_blocks": "Столы",
   "tag.item.bwt.vases": "Вазы",
   "tag.item.bwt.wooden_column_blocks": "Деревянные колонны",
-  "tag.item.bwt.wooden_corner_blocks": "Деревянные кубики",
+  "tag.item.bwt.wooden_corner_blocks": "Деревянные уголки",
   "tag.item.bwt.wooden_moulding_blocks": "Деревянные брусы",
   "tag.item.bwt.wooden_pedestal_blocks": "Деревянные пьедесталы",
   "tag.item.bwt.wooden_siding_blocks": "Деревянные обшивки",
