--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -426,7 +426,7 @@
   "tag.item.bwt.passes_ladder_filter": "Фильтруются лестницой",
   "tag.item.bwt.passes_slats_filter": "Фильтруются рейками",
   "tag.item.bwt.passes_trapdoor_filter": "Фильтруются люком",
-  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетением"
+  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетением",
   "tag.item.bwt.pedestal_blocks": "Пьедесталы",
   "tag.item.bwt.saw_dusts": "Опилки",
   "tag.item.bwt.siding_blocks": "Обшивки",
