--- a/src/main/resources/assets/bwt/lang/ru_ru.json
+++ b/src/main/resources/assets/bwt/lang/ru_ru.json
@@ -298,9 +298,9 @@
   "block.bwt.warped_planks_siding": "Искажённая обшивка",
   "block.bwt.warped_planks_table": "Искажённый стол",
   "block.bwt.white_wool_slab": "Плита из белой шерсти",
-  "block.bwt.wicker": "Плетение",
-  "block.bwt.wicker_block": "Плетённый блок",
-  "block.bwt.wicker_slab": "Плетённая плита",
+  "block.bwt.wicker": "Плетёнка",
+  "block.bwt.wicker_block": "Плетёный блок",
+  "block.bwt.wicker_slab": "Плетёная плита",
   "block.bwt.wooden_siding": "Деревянная обшивка",
   "block.bwt.wool_slab": "Шерстяная плита",
   "block.bwt.yellow_wool_slab": "Плита из жёлтой шерсти",
@@ -426,7 +426,7 @@
   "tag.item.bwt.passes_ladder_filter": "Фильтруются лестницой",
   "tag.item.bwt.passes_slats_filter": "Фильтруются рейками",
   "tag.item.bwt.passes_trapdoor_filter": "Фильтруются люком",
-  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетением",
+  "tag.item.bwt.passes_wicker_filter": "Фильтруются плетёнкой",
   "tag.item.bwt.pedestal_blocks": "Пьедесталы",
   "tag.item.bwt.saw_dusts": "Опилки",
   "tag.item.bwt.siding_blocks": "Обшивки",
